--- a/K-ShakeTune/K-SnT_axis.cfg
+++ b/K-ShakeTune/K-SnT_axis.cfg
@@ -2,15 +2,20 @@
 ###### STANDARD INPUT_SHAPER CALIBRATIONS ######
 ################################################
 # Written by Frix_x#0161 #
+# Modified by Zeanon     #
+
+[delayed_gcode _CHECK_SHAKETUNE_VARIABLES_VERSION]
+initial_duration: 0.5
+gcode:
+    {% set version = printer["gcode_macro _K-SHAKETUNE-VARIABLES"].version %}
+    {% if version is not defined or version|int != 1 %}
+        {action_emergency_stop("Wrong Version of variables.cfg, please update!")}
+    {% endif %}
 
 [gcode_macro AXES_SHAPER_CALIBRATION]
 description: Perform standard axis input shaper tests on one or both XY axes to select the best input shaper filter
 gcode:
     {% set variables = printer["gcode_macro _K-SHAKETUNE-VARIABLES"] %}
-    {% set version = variables.version %}
-    {% if version is not defined or version|int != 1 %}
-        {action_emergency_stop("Wrong Version of variables.cfg, please update!")}
-    {% endif %}
 
     {% set min_freq = params.FREQ_START|default(printer.configfile.settings.resonance_tester.min_freq)|float %}
     {% set max_freq = params.FREQ_END|default(printer.configfile.settings.resonance_tester.max_freq)|float %}
