--- a/K-ShakeTune/K-SnT_static_freq.cfg
+++ b/K-ShakeTune/K-SnT_static_freq.cfg
@@ -2,15 +2,12 @@
 ###### STANDARD INPUT_SHAPER CALIBRATIONS ######
 ################################################
 # Written by Frix_x#0161 #
+# Modified by Zeanon     #
 
 [gcode_macro EXCITATE_AXIS_AT_FREQ]
 description: Maintain a specified excitation frequency for a period of time to diagnose and locate a source of vibration
 gcode:
     {% set variables = printer["gcode_macro _K-SHAKETUNE-VARIABLES"] %}
-    {% set version = variables.version %}
-    {% if version is not defined or version|int != 1 %}
-        {action_emergency_stop("Wrong Version of variables.cfg, please update!")}
-    {% endif %}
 
     {% set frequency = params.FREQUENCY|default(25)|int %}
     {% set time = params.TIME|default(10)|int %}
