--- a/K-ShakeTune/K-SnT_vibrations.cfg
+++ b/K-ShakeTune/K-SnT_vibrations.cfg
@@ -2,14 +2,11 @@
 ###### VIBRATIONS AND SPEED OPTIMIZATIONS ######
 ################################################
 # Written by Frix_x#0161 #
+# Modified by Zeanon     #
 
 [gcode_macro VIBRATIONS_CALIBRATION]
 gcode:
     {% set variables = printer["gcode_macro _K-SHAKETUNE-VARIABLES"] %}
-    {% set version = variables.version %}
-    {% if version is not defined or version|int != 1 %}
-        {action_emergency_stop("Wrong Version of variables.cfg, please update!")}
-    {% endif %}
 
     {% set size = params.SIZE|default(60)|int %} # size of the area where the movements are done
     {% set direction = params.DIRECTION|default('XY') %} # can be set to either XY, AB, ABXY, A, B, X, Y, Z
