--- a/K-ShakeTune/K-SnT_belts.cfg
+++ b/K-ShakeTune/K-SnT_belts.cfg
@@ -2,15 +2,12 @@
 ###### STANDARD INPUT_SHAPER CALIBRATIONS ######
 ################################################
 # Written by Frix_x#0161 #
+# Modified by Zeanon     #
 
 [gcode_macro BELTS_SHAPER_CALIBRATION]
 description: Perform a custom half-axis test to analyze and compare the frequency profiles of individual belts on CoreXY printers
 gcode:
     {% set variables = printer["gcode_macro _K-SHAKETUNE-VARIABLES"] %}
-    {% set version = variables.version %}
-    {% if version is not defined or version|int != 1 %}
-        {action_emergency_stop("Wrong Version of variables.cfg, please update!")}
-    {% endif %}
 
     {% set min_freq = params.FREQ_START|default(printer.configfile.settings.resonance_tester.min_freq)|float %}
     {% set max_freq = params.FREQ_END|default(printer.configfile.settings.resonance_tester.max_freq)|float %}
