--- a/K-ShakeTune/K-SnT_axis.cfg
+++ b/K-ShakeTune/K-SnT_axis.cfg
@@ -61,7 +61,7 @@ gcode:
     {% endif %}
 
     {% if X %}
-        TEST_RESONANCES AXIS=X OUTPUT=raw_data NAME=x FREQ_START={min_freq} FREQ_END={max_freq} HZ_PER_SEC={hz_per_sec} INCLUDE_SMOOTHERS={INCLUDE_SMOOTHERS} {accel_chips}
+        TEST_RESONANCES AXIS=X OUTPUT=raw_data NAME=x FREQ_START={min_freq} FREQ_END={max_freq} HZ_PER_SEC={hz_per_sec} {accel_chips}
         M400
 
         RESPOND MSG="X axis frequency profile generation..."
@@ -70,7 +70,7 @@ gcode:
     {% endif %}
 
     {% if Y %}
-        TEST_RESONANCES AXIS=Y OUTPUT=raw_data NAME=y FREQ_START={min_freq} FREQ_END={max_freq} HZ_PER_SEC={hz_per_sec} INCLUDE_SMOOTHERS={INCLUDE_SMOOTHERS} {accel_chips}
+        TEST_RESONANCES AXIS=Y OUTPUT=raw_data NAME=y FREQ_START={min_freq} FREQ_END={max_freq} HZ_PER_SEC={hz_per_sec} {accel_chips}
         M400
 
         RESPOND MSG="Y axis frequency profile generation..."
