--- a/K-ShakeTune/K-SnT_axis.cfg
+++ b/K-ShakeTune/K-SnT_axis.cfg
@@ -38,7 +38,12 @@ gcode:
     {% else %}
         {% set accel_chips = '' %}
     {% endif %}
-    {% set include_smoothers = params.INCLUDE_SMOOTHERS|default(0)|int %}
+    {% set include_smoothers = params.INCLUDE_SMOOTHERS|default(False)|boolean %}
+    {% if include_smoothers %}
+        {% set include_smoothers = True %}
+    {% else %}
+        {% set include_smoothers = False %}
+    {% endif %}
 
     {% set X, Y = False, False %}
 
