--- a/K-ShakeTune/K-SnT_axis.cfg
+++ b/K-ShakeTune/K-SnT_axis.cfg
@@ -38,7 +38,11 @@ gcode:
     {% else %}
         {% set accel_chips = '' %}
     {% endif %}
-    {% set include_smoothers = params.INCLUDE_SMOOTHERS|default(False)|boolean %}
+    {% if params.INCLUDE_SMOOTHERS is defined %}
+        {% set include_smoothers = params.INCLUDE_SMOOTHERS|boolean %}
+    {% else %}
+        {% set include_smoothers = variables.include_smoothers|boolean %}
+    {% endif %}
     {% if include_smoothers %}
         {% set include_smoothers = True %}
     {% else %}
