--- a/shaketune/dummy_macros.cfg
+++ b/shaketune/dummy_macros.cfg
@@ -45,15 +45,15 @@ gcode:
 [gcode_macro COMPARE_BELTS_RESPONSES]
 description: dummy
 gcode:
-    {% set freq_start = params.FREQ_START|default(5) %}
-    {% set freq_end = params.FREQ_END|default(133.33) %}
+    {% set freq_start = params.FREQ_START %}
+    {% set freq_end = params.FREQ_END %}
     {% set hz_per_sec = params.HZ_PER_SEC|default(1) %}
     {% set accel_per_hz = params.ACCEL_PER_HZ %}
     {% set travel_speed = params.TRAVEL_SPEED|default(120) %}
     {% set z_height = params.Z_HEIGHT %}
     {% set params_filtered = {
-        "FREQ_START": freq_start,
-        "FREQ_END": freq_end,
+        "FREQ_START": freq_start if freq_start is not none else '',
+        "FREQ_END": freq_end if freq_end is not none else '',
         "HZ_PER_SEC": hz_per_sec,
         "ACCEL_PER_HZ": accel_per_hz if accel_per_hz is not none else '',
         "TRAVEL_SPEED": travel_speed,
@@ -65,8 +65,8 @@ gcode:
 [gcode_macro AXES_SHAPER_CALIBRATION]
 description: dummy
 gcode:
-    {% set freq_start = params.FREQ_START|default(5) %}
-    {% set freq_end = params.FREQ_END|default(133.33) %}
+    {% set freq_start = params.FREQ_START %}
+    {% set freq_end = params.FREQ_END %}
     {% set hz_per_sec = params.HZ_PER_SEC|default(1) %}
     {% set accel_per_hz = params.ACCEL_PER_HZ %}
     {% set axis = params.AXIS|default('all') %}
@@ -75,8 +75,8 @@ gcode:
     {% set travel_speed = params.TRAVEL_SPEED|default(120) %}
     {% set z_height = params.Z_HEIGHT %}
     {% set params_filtered = {
-        "FREQ_START": freq_start,
-        "FREQ_END": freq_end,
+        "FREQ_START": freq_start if freq_start is not none else '',
+        "FREQ_END": freq_end if freq_end is not none else '',
         "HZ_PER_SEC": hz_per_sec,
         "ACCEL_PER_HZ": accel_per_hz if accel_per_hz is not none else '',
         "AXIS": axis,
